// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render pagination component 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c7 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  background-color: #FFFFFF;
  color: #313440;
  display: inline-block;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: scroll;
  padding: 0.5rem 0;
  z-index: 1070;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.25rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 16rem;
  outline: none;
  padding: 0 1rem;
}

.c8[aria-selected='true'] {
  font-weight: 600;
}

.c8[data-highlighted='true'],
.c8[data-highlighted='true'] a {
  background-color: #F0F3FF;
  color: #3C64F4;
}

.c8 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #313440;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  margin: 0 -1rem;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10 + .bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c3 {
  color: #313440;
  width: auto;
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:0px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c10 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c10 {
    width: auto;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c2 c1"
  >
    <button
      aria-haspopup="true"
      class="c3 c4"
      id="trigger_1"
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        1 - 3 of 10
        <svg
          class="c6"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
          />
        </svg>
      </span>
    </button>
    <ul
      aria-labelledby="trigger_1"
      class="c7"
      id="dropdown_0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          2 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          3 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          5 per page
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c10"
      disabled=""
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Previous page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 00-1.41 0L8.71 11.3a.996.996 0 000 1.41l4.59 4.59a.996.996 0 101.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c3 c10"
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Next page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 000 1.41L13.17 12l-3.88 3.88a.996.996 0 101.41 1.41l4.59-4.59a.996.996 0 000-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render pagination component with invalid page info 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c7 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  background-color: #FFFFFF;
  color: #313440;
  display: inline-block;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: scroll;
  padding: 0.5rem 0;
  z-index: 1070;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.25rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 16rem;
  outline: none;
  padding: 0 1rem;
}

.c8[aria-selected='true'] {
  font-weight: 600;
}

.c8[data-highlighted='true'],
.c8[data-highlighted='true'] a {
  background-color: #F0F3FF;
  color: #3C64F4;
}

.c8 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #313440;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  margin: 0 -1rem;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10 + .bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c3 {
  color: #313440;
  width: auto;
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:0px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c10 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c10 {
    width: auto;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c2 c1"
  >
    <button
      aria-haspopup="true"
      class="c3 c4"
      id="trigger_1"
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        -8 - -6 of 10
        <svg
          class="c6"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
          />
        </svg>
      </span>
    </button>
    <ul
      aria-labelledby="trigger_1"
      class="c7"
      id="dropdown_0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          2 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          3 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          5 per page
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c10"
      disabled=""
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Previous page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 00-1.41 0L8.71 11.3a.996.996 0 000 1.41l4.59 4.59a.996.996 0 101.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c3 c10"
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Next page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 000 1.41L13.17 12l-3.88 3.88a.996.996 0 101.41 1.41l4.59-4.59a.996.996 0 000-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render pagination component with invalid range info 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c7 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  background-color: #FFFFFF;
  color: #313440;
  display: inline-block;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: scroll;
  padding: 0.5rem 0;
  z-index: 1070;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.25rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 16rem;
  outline: none;
  padding: 0 1rem;
}

.c8[aria-selected='true'] {
  font-weight: 600;
}

.c8[data-highlighted='true'],
.c8[data-highlighted='true'] a {
  background-color: #F0F3FF;
  color: #3C64F4;
}

.c8 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #313440;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  margin: 0 -1rem;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10 + .bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c3 {
  color: #313440;
  width: auto;
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:0px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c10 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c10 {
    width: auto;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c2 c1"
  >
    <button
      aria-haspopup="true"
      class="c3 c4"
      id="trigger_1"
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        1 - -5 of 10
        <svg
          class="c6"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
          />
        </svg>
      </span>
    </button>
    <ul
      aria-labelledby="trigger_1"
      class="c7"
      id="dropdown_0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          2 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          3 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          5 per page
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c10"
      disabled=""
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Previous page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 00-1.41 0L8.71 11.3a.996.996 0 000 1.41l4.59 4.59a.996.996 0 101.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c3 c10"
      disabled=""
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Next page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 000 1.41L13.17 12l-3.88 3.88a.996.996 0 101.41 1.41l4.59-4.59a.996.996 0 000-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render pagination component with no items 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c7 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  background-color: #FFFFFF;
  color: #313440;
  display: inline-block;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: scroll;
  padding: 0.5rem 0;
  z-index: 1070;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.25rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 16rem;
  outline: none;
  padding: 0 1rem;
}

.c8[aria-selected='true'] {
  font-weight: 600;
}

.c8[data-highlighted='true'],
.c8[data-highlighted='true'] a {
  background-color: #F0F3FF;
  color: #3C64F4;
}

.c8 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #313440;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  margin: 0 -1rem;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10 + .bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c3 {
  color: #313440;
  width: auto;
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:0px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c10 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c10 {
    width: auto;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c2 c1"
  >
    <button
      aria-haspopup="true"
      class="c3 c4"
      id="trigger_1"
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        0 of 0
        <svg
          class="c6"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
          />
        </svg>
      </span>
    </button>
    <ul
      aria-labelledby="trigger_1"
      class="c7"
      id="dropdown_0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          2 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          3 per page
        </div>
      </li>
      <li
        class="c8"
        data-highlighted="false"
        id="dropdown_0-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="c9 c1"
        >
          5 per page
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c10"
      disabled=""
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Previous page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 00-1.41 0L8.71 11.3a.996.996 0 000 1.41l4.59 4.59a.996.996 0 101.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c3 c10"
      disabled=""
      role="button"
      tabindex="0"
    >
      <span
        class="c5"
      >
        <svg
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title>
            Next page
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 000 1.41L13.17 12l-3.88 3.88a.996.996 0 101.41 1.41l4.59-4.59a.996.996 0 000-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
